--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,13 @@
      <Compile Include="Assets\Project\Scripts\Game\Board\BoardBehaviour.cs" />
      <Compile Include="Assets\Project\Scripts\Game\BulletBehaviour.cs" />
      <Compile Include="Assets\Project\Scripts\Game\CharacterBehaviour.cs" />
+     <Compile Include="Assets\Project\Scripts\Game\CharacterStates\CharacterAttackState.cs" />
+     <Compile Include="Assets\Project\Scripts\Game\CharacterStates\CharacterFaintState.cs" />
+     <Compile Include="Assets\Project\Scripts\Game\CharacterStates\CharacterIdleState.cs" />
+     <Compile Include="Assets\Project\Scripts\Game\CharacterStates\CharacterReceiveDamageState.cs" />
      <Compile Include="Assets\Project\Scripts\Game\CubeBehaviour.cs" />
+     <Compile Include="Assets\Project\Scripts\Util\FSM\FSM.cs" />
+     <Compile Include="Assets\Project\Scripts\Util\FSM\State.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
