Adicionado o prefab de EndGame

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Project\Scripts\Game\CharacterStates\CharacterIdleState.cs" />
      <Compile Include="Assets\Project\Scripts\Game\CharacterStates\CharacterPreGameState.cs" />
      <Compile Include="Assets\Project\Scripts\Game\CubeBehaviour.cs" />
+     <Compile Include="Assets\Project\Scripts\Game\EndGameBehaviour.cs" />
      <Compile Include="Assets\Project\Scripts\Game\LifebarBehaviour.cs" />
      <Compile Include="Assets\Project\Scripts\Game\TimerBehaviour.cs" />
      <Compile Include="Assets\Project\Scripts\Util\FSM\FSM.cs" />
@@ -84,16 +85,16 @@
      <Compile Include="Assets\metaio\Scripts\metaioMovieTexture.cs" />
      <Compile Include="Assets\metaio\Scripts\metaioSDK.cs" />
      <Compile Include="Assets\metaio\Scripts\metaioTracker.cs" />
-     <None Include="Assets\StreamingAssets\MetaioSDKLicense.xml" />
-     <None Include="Assets\StreamingAssets\TrackingData_IDMarker.xml" />
-     <None Include="Assets\Plugins\Google.ProtocolBuffers.Serialization.xml" />
-     <None Include="Assets\Plugins\Google.ProtocolBuffers.xml" />
      <None Include="Assets\Resources\metaio\UnlitTexture.shader" />
+     <None Include="Assets\StreamingAssets\MetaioSDKLicense.xml" />
+     <None Include="Assets\Plugins\Google.ProtocolBuffers.Serialization.xml" />
+     <None Include="Assets\StreamingAssets\TrackingData_IDMarker.xml" />
+     <None Include="Assets\Plugins\Google.ProtocolBuffers.xml" />
  <Reference Include="Google.ProtocolBuffers">
- <HintPath>D:/Projects/Pillol/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
+ <HintPath>C:/Users/Arthur/Documents/Programas/Unity/Pillol/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
  </Reference>
  <Reference Include="Google.ProtocolBuffers.Serialization">
- <HintPath>D:/Projects/Pillol/Assets/Plugins/Google.ProtocolBuffers.Serialization.dll</HintPath>
+ <HintPath>C:/Users/Arthur/Documents/Programas/Unity/Pillol/Assets/Plugins/Google.ProtocolBuffers.Serialization.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
