--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -85,16 +85,16 @@
      <Compile Include="Assets\metaio\Scripts\metaioMovieTexture.cs" />
      <Compile Include="Assets\metaio\Scripts\metaioSDK.cs" />
      <Compile Include="Assets\metaio\Scripts\metaioTracker.cs" />
-     <None Include="Assets\Resources\metaio\UnlitTexture.shader" />
      <None Include="Assets\StreamingAssets\MetaioSDKLicense.xml" />
-     <None Include="Assets\Plugins\Google.ProtocolBuffers.Serialization.xml" />
      <None Include="Assets\StreamingAssets\TrackingData_IDMarker.xml" />
+     <None Include="Assets\Plugins\Google.ProtocolBuffers.Serialization.xml" />
      <None Include="Assets\Plugins\Google.ProtocolBuffers.xml" />
+     <None Include="Assets\Resources\metaio\UnlitTexture.shader" />
  <Reference Include="Google.ProtocolBuffers">
- <HintPath>C:/Users/Arthur/Documents/Programas/Unity/Pillol/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
+ <HintPath>D:/Projects/Pillol/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
  </Reference>
  <Reference Include="Google.ProtocolBuffers.Serialization">
- <HintPath>C:/Users/Arthur/Documents/Programas/Unity/Pillol/Assets/Plugins/Google.ProtocolBuffers.Serialization.dll</HintPath>
+ <HintPath>D:/Projects/Pillol/Assets/Plugins/Google.ProtocolBuffers.Serialization.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
